"Refactor SQS queue consumer/producer and enhance configuration:
- Replace `isBlank` with `StringUtils.isBlank` for null-safe checks.
- Improve SQS message processing with better logging, error handling, and retries.
- Refactor `AsyncConfiguration` to simplify bean definition naming.
- Update `ObjectMapperConfiguration` to support Java time module and ignore unknown properties during deserialization.
- Add thread pause method in consumer to prevent hot looping on unsuccessful SQS polls."